--- a/Index.html
+++ b/Index.html
@@ -62,9 +62,12 @@
             <img src="img/Html.svg" alt="">
             <img src="img/css.svg" alt="">
             <img src="img/Js.svg" alt="">         
-            <img src="img/Django.svg" alt="">
             <img src="img/React.svg" alt="">
             <img src="img/Redux.svg" alt="">
+            <img src="img/Django.svg" alt="">
+            <img src="img/Express.svg" alt="">
+            <img src="img/AWS.svg" alt="">
+            <img src="img/Docker.svg" alt="">
         </section><br><br>
 
 
