--- a/Index.html
+++ b/Index.html
@@ -57,7 +57,7 @@
             </div>
 
         </section><br><br>
-            <h2>My Skills and Tools</h2>
+            <h2>My Skills and Tools</h2><br>
         <section id="skills">
             <img src="img/Html.svg" alt="">
             <img src="img/css.svg" alt="">
@@ -72,7 +72,7 @@
 
 
     <section id="projects">
-        <h2>What I do</h2><br><br>
+        <h2>What I do</h2>
         <h3 class="proj-title">Twitter Clone</h3> <br>
         <div class="project">
             <div class="proj-desc">
